# TacStats

./: .gitignore  .tool-versions  README.md  pyproject.toml
.circleci/: config.yml
scipts/: check.sh
scripts/: check.sh  update_fixtures.sh
src/: main.py
src/file/: metadata.py  reader.py
src/setup/: args.py  runtime.py
src/utils/: logger.py
tests/file/: test_metadata.py  test_reader.py
tests/setup/: test_args.py  test_runtime.py
