[tool.poetry]
name = "tacstats"
version = "0.1.0"
description = ""
authors = ["KieranMontgomery <kieran@tallarium.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
black = "^23.3.0"
flake8 = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"